# CreatorOps

./: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.ts  index.ts
apps/api/src/config/: index.ts  logger.ts
apps/api/src/integrations/storage/: storage.service.ts
apps/api/src/middleware/: auth.middleware.ts  error-handler.ts
apps/api/src/modules/ai/: ai.controller.ts  ai.routes.ts  ai.service.ts  types.ts
apps/api/src/modules/analytics/: analytics.controller.ts  analytics.routes.ts  analytics.service.ts
apps/api/src/modules/auth/: auth.controller.ts  auth.routes.ts  auth.service.ts
apps/api/src/services/: sync-scheduler.service.ts
apps/api/src/websocket/: gateway.ts
apps/video-processor/: Dockerfile  pyproject.toml  requirements.txt
apps/video-processor/src/: config.py  main.py
apps/video-processor/src/api/routes/: clips.py  health.py  shorts.py  subtitles.py  thumbnails.py  videos.py
apps/video-processor/src/services/: clip_extractor.py  shorts_creator.py  subtitle_generator.py  thumbnail_generator.py  video_processor.py
apps/video-processor/src/utils/: storage.py
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/i18n/: LanguageProvider.tsx  index.ts
apps/web/src/lib/: events.ts  utils.ts
infrastructure/docker/: .env.example  docker-compose.yml  init.sql
(+71 files in other folders)
